--- a/client/src/styles/CreateRecipe.module.css
+++ b/client/src/styles/CreateRecipe.module.css
@@ -6,13 +6,14 @@
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   height: 90vh;
-  width: 90vw;
+  width: 40vw;
   display: flex;
   margin-top: 2%;
-  margin-left: 3%;
+  margin-left: 30%;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
 }
 
 .supply {
@@ -25,13 +26,30 @@
   padding-top: 17px;
   display: flex;
   justify-content: center;
-  
+  flex-direction: column;
   width: 100%;
 }
 
 .Three {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: 100%;
   justify-content: center;
+}
+.desp{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Diets{
+  
+  display: flex;
+  height: 30px;
+  
+  justify-content: flex-start;
+}
+.ULs{
+  display: flex;
+  align-items: center;
 }
